Get the correct available resolutions from the printer

On Windows the resolutions are available in pairs so get the y
resolution from each pair as the y resolution is the one that is actually
useful in QtPrintSupport terms

Task-number: QTBUG-42007
Change-Id: I02c0588dd97c541e679f22431435751563caadb2
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 591bce8f6877ffb8e4ab81330ec077231eb2aab7 https://github.com/qt/qtbase/commit/591bce8f6877ffb8e4ab81330ec077231eb2aab7